# QCodeEditor

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  main.cpp
.github/workflows/: main.yml
example/: CMakeLists.txt  main.cpp
example/include/: MainWindow.hpp
example/resources/: demo_resources.qrc
example/resources/code_samples/: cxx.cpp  java.java  yaml.yaml
example/src/: MainWindow.cpp  main.cpp
include/: QCodeEditor  QJavaHighlighter  QYAMLHighlighter
include/internal/: QCXXHighlighter.hpp  QCodeEditor.hpp  QGLSLHighlighter.hpp  QJavaHighlighter.hpp  QLineNumberArea.hpp  QStyleSyntaxHighlighter.hpp  QSyntaxStyle.hpp  QXMLHighlighter.hpp  QYAMLHighlighter.hpp
resources/: default_style.xml  qcodeeditor_resources.qrc  resources.qrc
resources/languages/: glsl.xml  java.xml
src/: QGLSLCompleter.cpp
src/internal/: QCXXHighlighter.cpp  QCodeEditor.cpp  QFramedTextAttribute.cpp  QGLSLCompleter.cpp  QGLSLHighlighter.cpp  QJavaHighlighter.cpp  QLanguage.cpp  QLineNumberArea.cpp  QPythonHighlighter.cpp  QStyleSyntaxHighlighter.cpp  QSyntaxStyle.cpp  QXMLHighlighter.cpp  QYAMLHighlighter.cpp
